# Changelog

## Version 4.4.0

* Adding #237 zoom option for thumbnail (thanks to Lev Abashkin)
* Adding initial docker support
* Adding support for ENV variables - FF_CONFIG, FF_LANG, FF_HDR10PLUS, FF_WORKDIR
* Fixing FastFlix could not start if setting profile could not find needed encoder

## Version 4.3.1

* Adding VCEEncC decoder option
* Adding support for HDR10+ parser version 1.0.0 and above
* Fixing VCEEncC interlace being passed "False" string
* Fixing VCEEncC was not being passed profile option
* Fixing keep / remove chapters and metadata were not explicit in both cases

## Version 4.3.0

* Adding VCEEncC encoder support for HEVC and AVC
* Fixing Chinese translations (thanks to leonardyan)
* Fixing #256 Cannot load NVENC profiles because RC Lookahead is stored as int (thanks to Jan Hellwig)

## Version 4.2.3

* Fixing that the queue would not update errored films correctly
* Fixing "None" option for HDR -> SDR tonemap had to be lowercase

## Version 4.2.2

* Fixing output_directory not highest priority (thanks to cwills75)

## Version 4.2.1

* Adding support for source_directory and output_name_format in config file (thanks to cwills75)
* Fixing #129 no subtitles should be enabled, removing need for mkvpropedit (thanks to wiedemanu)
* Fixing network paths not working on Windows
* Changing difference between requirements and requirements-build and removing the build version

## Version 4.2.0

* Adding #109 NVENC HEVC support based on FFmpeg (thanks to Zeid164)
* Adding NVEenC encoder for HEVC and AVC
* Adding #166 More robust queue that is recoverable
* Adding ability to extract HDR10+ metadata if hdr10plus_parser is detected on path
* Adding #178 selector for number of autocrop positions throughout video (thanks to bmcassagne)
* Adding Windows 10 notification for queue complete success
* Adding #194 fast two pass encoding (thanks to Ugurtan)
* Adding Confirm dialogue for cancel encode and replace currently working on video