@@ -5,7 +5,9 @@
 * Adding #237 zoom option for thumbnail (thanks to Lev Abashkin)
 * Adding initial docker support
 * Adding support for ENV variables - FF_CONFIG, FF_LANG, FF_HDR10PLUS, FF_WORKDIR
-* Fixing FastFlix could not start if setting profile could not find needed encoder
+* Fixing FastFlix could not start if setting profile could not find x265 encoder
+* Fixing that downloading latest FFmpeg can fail to extract files if previous ones exist (thanks to ProFire)
+* Fixing that VCEEncC needs to use nnedi filter for deinterlacing (thanks to Onyx)
 
 ## Version 4.3.1
 
